--- a/pages/carnaval-10-dicas-de-fantasias-faca-voce-mesmo.html
+++ b/pages/carnaval-10-dicas-de-fantasias-faca-voce-mesmo.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="author" content="NoControle" />
     <meta name="description" content="Dez ideias para economizar na hora de sair bonito pro bloquinho.">
-    <link rel="stylesheet" href="../styles/main.css" />
-    <link rel="stylesheet" href="../styles/index.css" />
-    <link rel="stylesheet" href="../styles/post.css" />
+    <link rel="stylesheet" href="../styles/main.css?v=1.0.0" />
+    <link rel="stylesheet" href="../styles/index.css?v=1.0.0" />
+    <link rel="stylesheet" href="../styles/post.css?v=1.0.0" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -15,22 +15,22 @@
     />
     <title>No Controle</title>
     <!-- Icones Favicon -->
-    <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="../favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="../favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="../favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="../favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="../favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="../favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="../favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="../favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
-    <link rel="manifest" href="../favicon/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="../assets/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="../assets/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="../assets/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="../assets/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="../assets/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="../assets/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="../assets/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="../assets/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="../assets/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../assets/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="../assets/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="../favicon/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="../assets/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
   </head>
   <body>
@@ -187,23 +187,6 @@
           </div>
           <div class="col-lg-4">
             <div class="atalho-post">
-              <img src="../assets/post2.jpg" class="thumb-blog" alt="thumb">
-              <div class="descricao-atalho-post">
-                <h5 class="titulo-atalho-blog">
-                  10 dicas de fantasias estilo “faça você mesmo” para o Carnaval!
-                </h5>
-                <p id="subtitulo-atalho">Educação Financeira • 19/01/2020</p>
-                <a href="../pages/carnaval-10-dicas-de-fantasias-faca-voce-mesmo.html">
-                  <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
-                </a>
-              </div>              
-            </div class="atalho-post">
-          </div>
-        </div>
-
-        <div class="row linha-postagem ">
-          <div class="col-lg-4">
-            <div class="atalho-post">
               <img src="../assets/post3.jpg" class="thumb-blog" alt="thumb">
               <div class="descricao-atalho-post">
                 <h5 class="titulo-atalho-blog">
@@ -216,6 +199,9 @@
               </div>              
             </div class="atalho-post">
           </div>
+        </div>
+
+        <div class="row linha-postagem ">
           <div class="col-lg-4">
             <div class="atalho-post">
               <img src="../assets/post4.jpg" class="thumb-blog" alt="thumb">
@@ -225,6 +211,20 @@
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 21/01/2020</p>
                 <a href="../pages/como-empreender-no-mundo-digital.html">
+                  <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
+                </a>
+              </div>              
+            </div class="atalho-post">
+          </div>
+          <div class="col-lg-4">
+            <div class="atalho-post">
+              <img src="../assets/post5.png" class="thumb-blog" alt="thumb">
+              <div class="descricao-atalho-post">
+                <h5 class="titulo-atalho-blog">
+                  Saiba como pular carnaval ganhando dinheiro!
+                </h5>
+                <p id="subtitulo-atalho">Educação Financeira • 22/01/2020</p>
+                <a href="../pages/saiba-como-pular-carnaval-ganhando-dinheiro">
                   <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
                 </a>
               </div>              
