--- a/pages/ebook.html
+++ b/pages/ebook.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="author" content="NoControle" />
-    <link rel="stylesheet" href="../styles/main.css" />
-    <link rel="stylesheet" href="../styles/ebook.css" />
+    <link rel="stylesheet" href="../styles/main.css?v=1.0.0" />
+    <link rel="stylesheet" href="../styles/ebook.css?v=1.0.0" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -12,83 +12,24 @@
       crossorigin="anonymous"
     />
     <title>No Controle</title>
-    <!-- Icones Favicon -->
-    <link
-      rel="apple-touch-icon"
-      sizes="57x57"
-      href="../favicon/apple-icon-57x57.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="60x60"
-      href="../favicon/apple-icon-60x60.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="72x72"
-      href="../favicon/apple-icon-72x72.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="76x76"
-      href="../favicon/apple-icon-76x76.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="114x114"
-      href="../favicon/apple-icon-114x114.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="120x120"
-      href="../favicon/apple-icon-120x120.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="144x144"
-      href="../favicon/apple-icon-144x144.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="152x152"
-      href="../favicon/apple-icon-152x152.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="../favicon/apple-icon-180x180.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="192x192"
-      href="../favicon/android-icon-192x192.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="../favicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="96x96"
-      href="../favicon/favicon-96x96.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="../favicon/favicon-16x16.png"
-    />
-    <link rel="manifest" href="../favicon/manifest.json" />
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta
-      name="msapplication-TileImage"
-      content="../favicon/ms-icon-144x144.png"
-    />
-    <meta name="theme-color" content="#ffffff" />
+      <!-- Icones Favicon -->
+      <link rel="apple-touch-icon" sizes="57x57" href="../assets/favicon/apple-icon-57x57.png">
+      <link rel="apple-touch-icon" sizes="60x60" href="../assets/favicon/apple-icon-60x60.png">
+      <link rel="apple-touch-icon" sizes="72x72" href="../assets/favicon/apple-icon-72x72.png">
+      <link rel="apple-touch-icon" sizes="76x76" href="../assets/favicon/apple-icon-76x76.png">
+      <link rel="apple-touch-icon" sizes="114x114" href="../assets/favicon/apple-icon-114x114.png">
+      <link rel="apple-touch-icon" sizes="120x120" href="../assets/favicon/apple-icon-120x120.png">
+      <link rel="apple-touch-icon" sizes="144x144" href="../assets/favicon/apple-icon-144x144.png">
+      <link rel="apple-touch-icon" sizes="152x152" href="../assets/favicon/apple-icon-152x152.png">
+      <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-icon-180x180.png">
+      <link rel="icon" type="image/png" sizes="192x192"  href="../assets/favicon/android-icon-192x192.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="96x96" href="../assets/favicon/favicon-96x96.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon/favicon-16x16.png">
+      <link rel="manifest" href="../assets/favicon/manifest.json">
+      <meta name="msapplication-TileColor" content="#ffffff">
+      <meta name="msapplication-TileImage" content="../assets/favicon/ms-icon-144x144.png">
+      <meta name="theme-color" content="#ffffff">
   </head>
   <body style="background: #1B48D1;">
     <!-- Cabeçalho -->
@@ -142,7 +83,7 @@
                         para aproveitar muuuuito o Carnaval de BH gastando o
                         mínimo possível! Preencha com seus dados e baixe agora!
                         Aproveite e compartilhe com os amigos! <br /><br />
-                        * o e-book será aberto em nova aba no navegador</span
+                        * O E-book será aberto em uma nova aba do navegador</span
                       >
                       <input
                         name="name"
@@ -199,7 +140,7 @@
         </div>
       </div>
     </footer>
-    <script src="../js/main.js" type="text/javascript"></script>
+    <script src="../js/main.js?v=1.0.0" type="text/javascript"></script>
     <script
       type="text/javascript"
       id="hs-script-loader"
